style: :lipstick: fix dark mode depending on system settings

--- a/public/css/shared/style.css
+++ b/public/css/shared/style.css
@@ -1,8 +1,8 @@
 :root {
-  --background: #1e1e1e;
-  --text: #f1f1f1;
-  --link-text: #94bbff;
-  --link-hover: #f1f1f1;
+  --background: #f1f1f1;
+  --text: #1e1e1e;
+  --link-text: #307af9;
+  --link-hover: #1e1e1e;
 
   @media screen and (prefers-color-scheme: dark) {
     --background: #1e1e1e;
